--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>    
 <script>
-    const apiKey = "de3cbd4dd8870068bdc07ac6f864c218";
+    const apiKey = "";
     const apiUrl = " https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
     const searchBox= document.querySelector(".search input");
     const searchBtn= document.querySelector(".search button");
