--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>    
 <script>
-    const apiKey = "";
+    const apiKey = "92abd34822d915a2e68e72882cd734c3";
     const apiUrl = " https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
     const searchBox= document.querySelector(".search input");
     const searchBtn= document.querySelector(".search button");
